Update 'tsy9kse66-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang1106415.u1a1.p3.openshiftapps.com/rhtap/rhtap-qe:9993f2b0e13dbbbca61860852f4f772039c184d7@sha256:010fab654896db6f8055e7f7d18f8460fc0bfe42ea0d687a32afe03bf4feef8a

--- a/components/tsy9kse66-go/overlays/development/deployment-patch.yaml
+++ b/components/tsy9kse66-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tsy9kse66-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang1106415.u1a1.p3.openshiftapps.com/rhtap/rhtap-qe:9993f2b0e13dbbbca61860852f4f772039c184d7@sha256:010fab654896db6f8055e7f7d18f8460fc0bfe42ea0d687a32afe03bf4feef8a
+          name: container-image
